--- a/Site/CSS/inicioFinal.css
+++ b/Site/CSS/inicioFinal.css
@@ -22,19 +22,20 @@ body {
     width: 300px;
 }
 
-.tab h1 {
+h1 {
     color: #333;
     margin-bottom: 10px;
 }
 
-.tab p {
+p {
     color: #555;
     font-size: 16px;
 }
 
 .botao {
     display: block;
-    margin-left: 74px;
+    margin-left: auto;
+    margin-right: auto;
     padding: 15px;
     font-size: 1.2rem;
     border: none;
@@ -43,6 +44,21 @@ body {
     transition: background-color 0.3s ease;
     background-color: #007bff;
     color: white;
+    width: 100%;
+    margin-top: 15px;
+}
+
+.botao:hover {
+    background-color: #0056b3;
+}
+
+textarea {
+    width: 100%;
+    padding: 10px;
+    margin-top: 15px;
+    border: 1px solid #ddd;
+    border-radius: 8px;
+    resize: none;
 }
 
 a {
