--- a/Site/CSS/resposta.css
+++ b/Site/CSS/resposta.css
@@ -14,6 +14,10 @@
     border-radius: 8px;
     cursor: pointer;
     transition: background-color 0.3s ease;
-    background-color: #007bff;
-    color: white;
+    background-color: #8B0000;
+    color: rgb(255, 255, 255);
+}
+
+.botaoResposta:hover {
+    background-color: #b00000;
 }
