--- a/Site/CSS/style.css
+++ b/Site/CSS/style.css
@@ -19,17 +19,20 @@
 
 body {
     font-family: Arial, sans-serif;
-    background: linear-gradient(to bottom, #007bff, #6f42c1, #d63384);
-    color: #333;
+    background: linear-gradient(to bottom, #8B0000, #333333); /* Degradê de vermelho escuro para cinza escuro */
     display: flex;
     justify-content: center;
     align-items: center;
     height: 100vh;
+    background-attachment: fixed;
+    background-size: cover;
+    position: relative;
+    overflow: hidden;
 }
 
 /* Container principal */
 .container {
-    background-color: #fff;
+    background-color: #e4e4e4;
     padding: 40px;
     border-radius: 10px;
     box-shadow: 0px 0px 15px rgba(0, 0, 0, 0.2);
@@ -41,7 +44,7 @@ body {
 h1 {
     font-size: 2.5rem;
     margin-bottom: 20px;
-    color: #007bff;
+    color: #000;
 }
 
 .pergunta p {
@@ -68,7 +71,7 @@ h1 {
     align-items: center; 
     width: 40px; 
     height: 40px; 
-    background-color: #007bff; 
+    background-color: #8B0000; 
     color: white; 
     font-size: 1.5rem; 
     border-radius: 5px; 
@@ -86,17 +89,17 @@ h1 {
     border-radius: 8px;
     cursor: pointer;
     transition: background-color 0.3s ease;
-    background-color: #007bff;
+    background-color: #8B0000;
     color: white;
 }
 
 .botao:hover {
-    background-color: #0056b3;
+    background-color: #b00000;
 }
 
 .botao:focus {
     outline: none;
-    border: 2px solid #0056b3;
+    border: 2px solid #b00000;
 }
 
 /* Barra de progresso */
@@ -107,13 +110,6 @@ h1 {
     border-radius: 5px;
     overflow: hidden;
     position: relative;
-}
-
-.progressoBar {
-    width: 0%;
-    height: 100%;
-    background-color: #007bff;
-    transition: width 0.4s ease;
 }
 
 a {
