--- a/Site/CSS/style.css
+++ b/Site/CSS/style.css
@@ -131,7 +131,16 @@ a {
         font-size: 1.2rem;
     }
 
-    .opcoes button {
-        font-size: 1rem;
+    .botao {
+        font-size: 4vw; /* Fonte do botão adaptável à largura da tela */
+        padding: 2.5vw; /* Espaçamento interno adaptável */
+        width: 80vw; /* Largura do botão em função da largura da tela */
+        max-width: 100%; /* Evita que o botão ultrapasse a tela */
+    }
+
+    .caixa {
+        width: 10vw;
+        height: 10vw;
+        font-size: 3vw;
     }
 }
