--- a/templates/pergunta3/pergunta3.html
+++ b/templates/pergunta3/pergunta3.html
@@ -22,19 +22,19 @@
         <div class="opcoes">
             <div class="opcao">
                 <div class="caixa" class="col-1">A</div>
-                <a href="../../HTML/pergunta3/errado3A.html"><button class="botao">Gerente de projeto</button></a>
+                <a href="/templates/pergunta3/errado3A.html"><button class="botao">Gerente de projeto</button></a>
             </div>
             <div class="opcao">
                 <div class="caixa" class="col-1">B</div>
-                <a href="../../HTML/pergunta3/errado3B.html"><button class="botao">Desenvolvedor</button></a>
+                <a href="/templates/pergunta3/errado3B.html"><button class="botao">Desenvolvedor</button></a>
             </div>
             <div class="opcao">
                 <div class="caixa" class="col-1">C</div>
-                <a href="../../HTML/pergunta3/certo3.html"><button class="botao">Scrum Master</button></a>
+                <a href="/templates/pergunta3/certo3.html"><button class="botao">Scrum Master</button></a>
             </div>
             <div class="opcao">
                 <div class="caixa" class="col-1">D</div>
-                <a href="../../HTML/pergunta3/errado3C.html"><button class="botao">Stakeholder</button></a>
+                <a href="/templates/pergunta3/errado3C.html"><button class="botao">Stakeholder</button></a>
             </div>
         </div>
     </div>
