--- a/templates/pergunta4/errado4C.html
+++ b/templates/pergunta4/errado4C.html
@@ -17,7 +17,7 @@
         <div class="opcoes"></div>
             <div class="opcao">
                     <div>
-                        <a href="../../HTML/pergunta4/pergunta4.html"><button class="botaoResposta" class="col-6">Voltar</button></a>
+                        <a href="/templates/pergunta4/pergunta4.html"><button class="botaoResposta" class="col-6">Voltar</button></a>
                     </div>
                     <div>
                         <a href="../../HTML/pergunta5/pergunta5.html"><button class="botaoResposta" class="col-6">Próximo</button></a>
