--- a/templates/pergunta2/pergunta2.html
+++ b/templates/pergunta2/pergunta2.html
@@ -22,19 +22,19 @@
         <div class="opcoes">
             <div class="opcao">
                 <div class="caixa" class="col-1">A</div>
-                <a href="../../HTML/pergunta2/errado2A.html"><button class="botao">Medir variáveis físicas</button></a>
+                <a href="/templates/pergunta2/errado2A.html"><button class="botao">Medir variáveis físicas</button></a>
             </div>
             <div class="opcao">
                 <div class="caixa" class="col-1">B</div>
-                <a href="../../HTML/pergunta2/certo2.html"><button class="botao">Converter energia elétrica em movimento mecânico </button></a>
+                <a href="/templates/pergunta2/certo2.html"><button class="botao">Converter energia elétrica em movimento mecânico </button></a>
             </div>
             <div class="opcao">
                 <div class="caixa" class="col-1">C</div>
-                <a href="../../HTML/pergunta2/errado2B.html"><button class="botao">Monitorar sinais de entrada</button></a>
+                <a href="/templates/pergunta2/errado2B.html"><button class="botao">Monitorar sinais de entrada</button></a>
             </div>
             <div class="opcao">
                 <div class="caixa" class="col-1">D</div>
-                <a href="../../HTML/pergunta2/errado2C.html"><button class="botao">Transmitir dados para um controlador</button></a>
+                <a href="/templates/pergunta2/errado2C.html"><button class="botao">Transmitir dados para um controlador</button></a>
             </div>
         </div>
     </div>
