--- a/templates/pergunta3/certo3.html
+++ b/templates/pergunta3/certo3.html
@@ -16,10 +16,10 @@
          <div class="opcoes">
             <div class="opcao">
                 <div>
-                    <a href="../../HTML/pergunta3/pergunta3.html"><button class="botaoResposta" class="col-6">Voltar</button></a>
+                    <a href="/templates/pergunta3/pergunta3.html"><button class="botaoResposta" class="col-6">Voltar</button></a>
                 </div>
                 <div>
-                    <a href="../../HTML/pergunta4/pergunta4.html"><button class="botaoResposta" class="col-6">Próximo</button></a>
+                    <a href="/templates/pergunta4/pergunta4.html"><button class="botaoResposta" class="col-6">Próximo</button></a>
                 </div>
             </div> 
         </div>
