--- a/templates/pergunta12/pergunta12.html
+++ b/templates/pergunta12/pergunta12.html
@@ -22,19 +22,19 @@
         <div class="opcoes">
             <div class="opcao">
                 <div class="caixa" class="col-1">A</div>
-                <a href="../../HTML/pergunta12/errado12A.html"><button class="botao">display()</button></a>
+                <a href="./errado12A.html"><button class="botao">display()</button></a>
             </div>
             <div class="opcao">
                 <div class="caixa" class="col-1">B</div>
-                <a href="../../HTML/pergunta12/certo12.html"><button class="botao">alert()</button></a>
+                <a href="./certo12.html"><button class="botao">alert()</button></a>
             </div>
             <div class="opcao">
                 <div class="caixa" class="col-1">C</div>
-                <a href="../../HTML/pergunta12/errado12B.html"><button class="botao">show()</button></a>
+                <a href="./errado12B.html"><button class="botao">show()</button></a>
             </div>
             <div class="opcao">
                 <div class="caixa" class="col-1">D</div>
-                <a href="../../HTML/pergunta12/errado12C.html"><button class="botao">msg()</button></a>
+                <a href="./errado12C.html"><button class="botao">msg()</button></a>
             </div>
         </div>
     </div>
