--- a/templates/pergunta14/certo14.html
+++ b/templates/pergunta14/certo14.html
@@ -16,10 +16,10 @@
          <div class="opcoes">
             <div class="opcao">
                 <div>
-                    <a href="../../HTML/pergunta14/pergunta14.html"><button class="botaoResposta" class="col-6">Voltar</button></a>
+                    <a href="/templates/pergunta14/pergunta14.html"><button class="botaoResposta" class="col-6">Voltar</button></a>
                 </div>
                 <div>
-                    <a href="../../HTML/final/final.html"><button class="botaoResposta" class="col-6">Próximo</button></a>
+                    <a href="/templates/final/final.html"><button class="botaoResposta" class="col-6">Próximo</button></a>
                 </div>  
             </div> 
         </div>
