--- a/templates/pergunta9/pergunta9.html
+++ b/templates/pergunta9/pergunta9.html
@@ -22,19 +22,19 @@
         <div class="opcoes">
             <div class="opcao">
                 <div class="caixa" class="col-1">A</div>
-                <a href="../../HTML/pergunta9/errado9A.html"><button class="botao">Java Variable Management</button></a>
+                <a href="./errado9A.html"><button class="botao">Java Variable Management</button></a>
             </div>
             <div class="opcao">
                 <div class="caixa" class="col-1">B</div>
-                <a href="../../HTML/pergunta9/certo9.html"><button class="botao">Java Virtual Machine</button></a>
+                <a href="./certo9.html"><button class="botao">Java Virtual Machine</button></a>
             </div>
             <div class="opcao">
                 <div class="caixa" class="col-1">C</div>
-                <a href="../../HTML/pergunta9/errado9B.html"><button class="botao">Java Version Manager</button></a>
+                <a href="./errado9B.html"><button class="botao">Java Version Manager</button></a>
             </div>
             <div class="opcao">
                 <div class="caixa" class="col-1">D</div>
-                <a href="../../HTML/pergunta9/errado9C.html"><button class="botao">Java Vendor Machine</button></a>
+                <a href="./errado9C.html"><button class="botao">Java Vendor Machine</button></a>
             </div>
         </div>
     </div>
