--- a/templates/pergunta10/errado10B.html
+++ b/templates/pergunta10/errado10B.html
@@ -17,10 +17,10 @@
         <div class="opcoes"></div>
             <div class="opcao">
                 <div>
-                    <a href="../../HTML/pergunta10/pergunta10.html"><button class="botaoResposta" class="col-6">Voltar</button></a>
+                    <a href="/templates/pergunta10/pergunta10.html"><button class="botaoResposta" class="col-6">Voltar</button></a>
                 </div>
                 <div>
-                    <a href="../../HTML/pergunta11/pergunta11.html"><button class="botaoResposta" class="col-6">Próximo</button></a>
+                    <a href="/templates/pergunta11/pergunta11.html"><button class="botaoResposta" class="col-6">Próximo</button></a>
                 </div>
             </div> 
         </div>
