--- a/templates/pergunta11/pergunta11.html
+++ b/templates/pergunta11/pergunta11.html
@@ -22,19 +22,19 @@
         <div class="opcoes">
             <div class="opcao">
                 <div class="caixa" class="col-1">A</div>
-                <a href="../../HTML/pergunta11/certo11.html"><button class="botao">let</button></a>
+                <a href="./certo11.html"><button class="botao">let</button></a>
             </div>
             <div class="opcao">
                 <div class="caixa" class="col-1">B</div>
-                <a href="../../HTML/pergunta11/errado11B.html"><button class="botao">int</button></a>
+                <a href="./errado11A.html"><button class="botao">int</button></a>
             </div>
             <div class="opcao">
                 <div class="caixa" class="col-1">C</div>
-                <a href="../../HTML/pergunta11/errado11B.html"><button class="botao">float</button></a>
+                <a href="./errado11B.html"><button class="botao">float</button></a>
             </div>
             <div class="opcao">
                 <div class="caixa" class="col-1">D</div>
-                <a href="../../HTML/pergunta11/errado11C.html"><button class="botao">string</button></a>
+                <a href="./errado11C.html"><button class="botao">string</button></a>
             </div>
         </div>
     </div>
