--- a/templates/pergunta12/errado12A.html
+++ b/templates/pergunta12/errado12A.html
@@ -17,10 +17,10 @@
         <div class="opcoes"></div>
             <div class="opcao">
                 <div>
-                    <a href="../../HTML/pergunta12/pergunta12.html"><button class="botaoResposta" class="col-6">Voltar</button></a>
+                    <a href="/templates/pergunta12/pergunta12.html"><button class="botaoResposta" class="col-6">Voltar</button></a>
                 </div>
                 <div>
-                    <a href="../../HTML/pergunta13/pergunta13.html"><button class="botaoResposta" class="col-6">Próximo</button></a>
+                    <a href="/templates/pergunta13/pergunta13.html"><button class="botaoResposta" class="col-6">Próximo</button></a>
                 </div>
             </div> 
         </div>
