--- a/templates/pergunta13/pergunta13.html
+++ b/templates/pergunta13/pergunta13.html
@@ -22,19 +22,19 @@
         <div class="opcoes">
             <div class="opcao">
                 <div class="caixa" class="col-1">A</div>
-                <a href="../../HTML/pergunta13/errado13A.html"><button class="botao">cm</button></a>
+                <a href="./errado13A.html"><button class="botao">cm</button></a>
             </div>
             <div class="opcao">
                 <div class="caixa" class="col-1">B</div>
-                <a href="../../HTML/pergunta13/certo13.html"><button class="botao"> px </button></a>
+                <a href="./certo13.html"><button class="botao"> px </button></a>
             </div>
             <div class="opcao">
                 <div class="caixa" class="col-1">C</div>
-                <a href="../../HTML/pergunta13/errado13B.html"><button class="botao">km</button></a>
+                <a href="./errado13B.html"><button class="botao">km</button></a>
             </div>
             <div class="opcao">
                 <div class="caixa" class="col-1">D</div>
-                <a href="../../HTML/pergunta13/errado13C.html"><button class="botao">m</button></a>
+                <a href="./errado13C.html"><button class="botao">m</button></a>
             </div>
         </div>
     </div>
