--- a/templates/pergunta4/pergunta4.html
+++ b/templates/pergunta4/pergunta4.html
@@ -22,19 +22,19 @@
         <div class="opcoes">
             <div class="opcao">
                 <div class="caixa" class="col-1">A</div>
-                <a href="../../HTML/pergunta4/errado4A.html"><button class="botao">Detalhamento extensivo de requisitos</button></a>
+                <a href="./errado4A.html"><button class="botao">Detalhamento extensivo de requisitos</button></a>
             </div>
             <div class="opcao">
                 <div class="caixa" class="col-1">B</div>
-                <a href="../../HTML/pergunta4/certo4.html"><button class="botao">Flexibilidade e adaptabilidade às mudanças </button></a>
+                <a href="./certo4.html"><button class="botao">Flexibilidade e adaptabilidade às mudanças </button></a>
             </div>
             <div class="opcao">
                 <div class="caixa" class="col-1">C</div>
-                <a href="../../HTML/pergunta4/errado4B.html"><button class="botao">Controle rígido de cada fase do desenvolvimento</button></a>
+                <a href="./errado4B.html"><button class="botao">Controle rígido de cada fase do desenvolvimento</button></a>
             </div>
             <div class="opcao">
                 <div class="caixa" class="col-1">D</div>
-                <a href="../../HTML/pergunta4/errado4C.html"><button class="botao">Forte dependência de documentação formal</button></a>
+                <a href="./errado4C.html"><button class="botao">Forte dependência de documentação formal</button></a>
             </div>
         </div>
     </div>
