--- a/templates/pergunta7/certo7.html
+++ b/templates/pergunta7/certo7.html
@@ -16,10 +16,10 @@
          <div class="opcoes">
             <div class="opcao">
                 <div>
-                    <a href="../../HTML/pergunta7/pergunta7.html"><button class="botaoResposta" class="col-6">Voltar</button></a>
+                    <a href="/templates/pergunta7/pergunta7.html"><button class="botaoResposta" class="col-6">Voltar</button></a>
                 </div>
                 <div>
-                    <a href="../../HTML/pergunta8/pergunta8.html"><button class="botaoResposta" class="col-6">Próximo</button></a>
+                    <a href="/templates/pergunta8/pergunta8.html"><button class="botaoResposta" class="col-6">Próximo</button></a>
                 </div>
             </div> 
         </div>
