--- a/templates/pergunta7/pergunta7.html
+++ b/templates/pergunta7/pergunta7.html
@@ -22,19 +22,19 @@
         <div class="opcoes">
             <div class="opcao">
                 <div class="caixa" class="col-1">A</div>
-                <a href="../../HTML/pergunta7/errado7A.html"><button class="botao"> DELETE</button></a>
+                <a href="./errado7A.html"><button class="botao"> DELETE</button></a>
             </div>
             <div class="opcao">
                 <div class="caixa" class="col-1">B</div>
-                <a href="../../HTML/pergunta7/errado7B.html"><button class="botao">ALTER</button></a>
+                <a href="./errado7B.html"><button class="botao">ALTER</button></a>
             </div>
             <div class="opcao">
                 <div class="caixa" class="col-1">C</div>
-                <a href="../../HTML/pergunta7/errado7C.html"><button class="botao">INSERT</button></a>
+                <a href="./errado7C.html"><button class="botao">INSERT</button></a>
             </div>
             <div class="opcao">
                 <div class="caixa" class="col-1">D</div>
-                <a href="../../HTML/pergunta7/certo7.html"><button class="botao">UPDATE </button></a>
+                <a href="./certo7.html"><button class="botao">UPDATE </button></a>
             </div>
         </div>
     </div>
