--- a/templates/pergunta8/pergunta8.html
+++ b/templates/pergunta8/pergunta8.html
@@ -22,19 +22,19 @@
         <div class="opcoes">
             <div class="opcao">
                 <div class="caixa" class="col-1">A</div>
-                <a href="../../HTML/pergunta8/certo8.html"><button class="botao"> DROP</button></a>
+                <a href="./certo8.html"><button class="botao"> DROP</button></a>
             </div>
             <div class="opcao">
                 <div class="caixa" class="col-1">B</div>
-                <a href="../../HTML/pergunta8/errado8A.html"><button class="botao">DELETE</button></a>
+                <a href="./errado8A.html"><button class="botao">DELETE</button></a>
             </div>
             <div class="opcao">
                 <div class="caixa" class="col-1">C</div>
-                <a href="../../HTML/pergunta8/errado8B.html"><button class="botao"> REMOVE</button></a>
+                <a href="./errado8B.html"><button class="botao"> REMOVE</button></a>
             </div>
             <div class="opcao">
                 <div class="caixa" class="col-1">D</div>
-                <a href="../../HTML/pergunta8/errado8C.html"><button class="botao">TRUNCATE</button></a>
+                <a href="./errado8C.html"><button class="botao">TRUNCATE</button></a>
             </div>
         </div>
     </div>
