--- a/Site/CSS/style.css
+++ b/Site/CSS/style.css
@@ -136,15 +136,72 @@ a {
     .botao {
         font-size: 16px;
         padding: 12px;
-        width: 90%;
-        min-width: 200px; /* Limite mínimo do botão em telas menores */
-        max-width: 100%;
+        max-width: 380px;
     }
 
-    /* Ajuste de responsividade para a caixa */
     .caixa {
         width: 35px;
         height: 35px;
         font-size: 16px;
+    }
+}
+
+@media (max-width: 575px) {
+    .botao {
+        max-width: 360px;
+    }
+}
+
+@media (max-width: 550px) {
+    .botao {
+        max-width: 340px;
+    }
+}
+
+@media (max-width: 525px) {
+    .botao {
+        max-width: 320px;
+    }
+}
+
+@media (max-width: 500px) {
+    .botao {
+        max-width: 300px;
+    }
+}
+
+@media (max-width: 475px) {
+    .botao {
+        max-width: 280px;
+    }
+}
+
+@media (max-width: 450px) {
+    .botao {
+        max-width: 260px;
+    }
+}
+
+@media (max-width: 425px) {
+    .botao {
+        max-width: 240px;
+    }
+}
+
+@media (max-width: 400px) {
+    .botao {
+        max-width: 220px;
+    }
+}
+
+@media (max-width: 375px) {
+    .botao {
+        max-width: 200px;
+    }
+}
+
+@media (max-width: 350px) {
+    .botao {
+        max-width: 180px;
     }
 }
