--- a/templates/final/final.html
+++ b/templates/final/final.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Finalização</title>
-    <link rel="stylesheet" href="../../CSS/inicioFinal.css">
+    <link rel="stylesheet" href="/assets/CSS/inicioFinal.css">
 </head>
 <body>
 
@@ -12,7 +12,7 @@
         <h1>Obrigado por Participar!</h1>
         <p>Agradecemos sua contribuição. Esperamos que tenha tido uma ótima experiência!</p>
 
-        <a href="../../HTML/inicio/inicio.html" class="botao">Voltar ao Início</a>
+        <a href="/index.html" class="botao">Voltar ao Início</a>
     </div>
 </body>
 </html>
