caminho das profissões corrigido

--- a/templates/pergunta14/certo14.html
+++ b/templates/pergunta14/certo14.html
@@ -19,7 +19,7 @@
                     <a href="/templates/pergunta13/pergunta13.html"><button class="botaoResposta" class="col-6">Voltar</button></a>
                 </div>
                 <div>
-                    <a href="/templates/final/final.html"><button class="botaoResposta" class="col-6">Próximo</button></a>
+                    <a href="/templates/pergunta14/profissao7.html"><button class="botaoResposta" class="col-6">Próximo</button></a>
                 </div>  
             </div> 
         </div>
